# Synaptic-Shenanigans

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  neurosim.h  neurosim_ffi.py  neurosim_rpc.py  test_ffi.py  test_ffi_rpc.py  test_rpc.py
.github/workflows/: ci.yml
analysis/: analysis.py
benches/: neuron_step.rs
rpc/: neurosim.proto
src/: adex.rs  event.rs  hodgkin_huxley.rs  homeostatic.rs  izhikevich.rs  lib.rs  lif.rs  main.rs  metrics.rs  network.rs  plasticity.rs  poisson.rs  rpc.rs  simulation.rs  synapse.rs  synaptic_scaling.rs
tests/: adapters_equivalence.rs  adex.rs  determinism.rs  hodgkin_huxley.rs  homeostatic.rs  izhikevich.rs  lif.rs  metrics.rs  network.rs  plasticity.rs  poisson.rs  simulation.rs  synaptic_scaling.rs  topology_simulation.rs  utils.rs
