[package]
name = "synaptic_shenanigans"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
crossbeam = "0.8"
rayon = { version = "1.7", optional = true }
parking_lot = { version = "0.12", optional = true }
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }
prost-types = "0.12"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["rpc"]  # Optional: Enable rpc by default if it makes sense for your project
performance = ["rayon", "parking_lot"]
ffi = []
rpc = ["tonic", "prost"]

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
criterion = "0.8.1"

[profile.release]
debug = true